--- a/demo/ng-vcl/demo-components/wormhole/demo.component.html
+++ b/demo/ng-vcl/demo-components/wormhole/demo.component.html
@@ -3,8 +3,7 @@ The template wormhole is defined above the hr
   But is rendered below
 </template>
 <hr>
-<div [wormhole]="someTemplate">
-</div>
+<wormhole [connect]="someTemplate"></wormhole>
 <hr>
 <div #target></div>
 
