--- a/src/ng-vcl/tab-nav/tab-nav.component.html
+++ b/src/ng-vcl/tab-nav/tab-nav.component.html
@@ -9,7 +9,7 @@
          [class.aria-selected]="selectedTabIndex===i"
          (tap)="selectTab(tab)">
         <span class="vclTabLabel"> 
-          <div [wormhole]="tab.label"></div>
+          <wormhole [connect]="tab.label"></wormhole>
         </span>
     </div>
   </div>
