--- a/demo/ng-vcl/demo-components/wormhole/demo.component.html
+++ b/demo/ng-vcl/demo-components/wormhole/demo.component.html
@@ -1,7 +1,7 @@
 The template wormhole is defined above the hr
-<template #someTemplate>
+<ng-template #someTemplate>
   But is rendered below
-</template>
+</ng-template>
 <hr>
 <wormhole [connect]="someTemplate"></wormhole>
 <hr>
