--- a/src/ng-vcl/icon/icon.component.html
+++ b/src/ng-vcl/icon/icon.component.html
@@ -1,5 +1,4 @@
 <img *ngIf="src" [attr.src]="src">
-<svg *ngIf="svguse" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
-  <use xmlns:xlink="http://www.w3.org/1999/xlink" attr.xlink:href="{{svguse}}"></use>
-</svg>
-<ng-content></ng-content>
+<!--<svg *ngIf="svguse" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
+  <use [attr.xmlns:xlink]="'http://www.w3.org/1999/xlink'"></use>
+</svg>-->
