--- a/src/ng-vcl/metalist/metalist.component.html
+++ b/src/ng-vcl/metalist/metalist.component.html
@@ -1,5 +1,5 @@
-<template
+<ng-template
   *ngFor="let item of items"
   [ngTemplateOutlet]="template1"
   [ngOutletContext]="{item: item, meta: getMeta(item) }">
-</template>
+</ng-template>
