--- a/demo/ng-vcl/demo-components/layer/demo.component.html
+++ b/demo/ng-vcl/demo-components/layer/demo.component.html
@@ -5,7 +5,7 @@ Press escape to close the top layer<br><br>
 <button vcl-button (tap)="openLayer()" label="open layer programmatically"></button>
 <button vcl-button (tap)="openFooLayer()" label="open component layer"></button>
 
-<template vcl-layer #layerNonModal="layer" [modal]="false">
+<ng-template vcl-layer #layerNonModal="layer" [modal]="false">
   <div class="vclPanel vclNoMargin">
     <div class="vclPanelHeader">
       <h3 class="vclPanelTitle">Non-modal layer title goes here</h3>
@@ -17,9 +17,9 @@ Press escape to close the top layer<br><br>
       </p>
     </div>
   </div>
-</template>
+</ng-template>
 
-<template vcl-layer #layerModal="layer" [modal]="true">
+<ng-template vcl-layer #layerModal="layer" [modal]="true">
   <div class="vclPanel vclNoMargin">
     <div class="vclPanelHeader">
       <h3 class="vclPanelTitle">Modal layer title goes here</h3>
@@ -32,4 +32,4 @@ Press escape to close the top layer<br><br>
       </p>
     </div>
   </div>
-</template>
+</ng-template>
