--- a/demo/ng-vcl/demo-components/tab-nav/tab-nav.component.html
+++ b/demo/ng-vcl/demo-components/tab-nav/tab-nav.component.html
@@ -2,14 +2,14 @@
 
 <vcl-tab-nav >
   <vcl-tab>
-    <template vcl-tab-label>Tab1</template>
+    <ng-template vcl-tab-label>Tab1</ng-template>
     Content1
   </vcl-tab>
   <vcl-tab>
-    <template vcl-tab-label>Tab2</template>
+    <ng-template vcl-tab-label>Tab2</ng-template>
     Content2
   </vcl-tab>
-  <vcl-tab [disabled]="true"><template vcl-tab-label>Tab3 disabled</template>
+  <vcl-tab [disabled]="true"><ng-template vcl-tab-label>Tab3 disabled</ng-template>
     Content3
   </vcl-tab>
 </vcl-tab-nav>
@@ -20,11 +20,11 @@
 
 <vcl-tab-nav layout="right" tabContentClass="vclSpan-70p" tabsClass="vclSpan-30p">
   <vcl-tab>
-    <template vcl-tab-label>Tab1</template>
+    <ng-template vcl-tab-label>Tab1</ng-template>
     Content1
   </vcl-tab>
   <vcl-tab>
-    <template vcl-tab-label>Tab2</template>
+    <ng-template vcl-tab-label>Tab2</ng-template>
     Content2
   </vcl-tab>
 </vcl-tab-nav>
@@ -35,11 +35,11 @@
 
 <vcl-tab-nav layout="left" tabContentClass="vclSpan-70p" tabsClass="vclSpan-30p">
   <vcl-tab>
-    <template vcl-tab-label>Tab1</template>
+    <ng-template vcl-tab-label>Tab1</ng-template>
     Content1
   </vcl-tab>
   <vcl-tab>
-    <template vcl-tab-label>Tab2</template>
+    <ng-template vcl-tab-label>Tab2</ng-template>
     Content2
   </vcl-tab>
 </vcl-tab-nav>
@@ -50,11 +50,11 @@
 
 <vcl-tab-nav borders=true>
   <vcl-tab>
-    <template vcl-tab-label>Tab1</template>
+    <ng-template vcl-tab-label>Tab1</ng-template>
     Content1
   </vcl-tab>
   <vcl-tab>
-    <template vcl-tab-label>Tab2</template>
+    <ng-template vcl-tab-label>Tab2</ng-template>
     Content2
   </vcl-tab>
 </vcl-tab-nav>
@@ -63,10 +63,10 @@
 
 <vcl-tab-nav [(selectedTabIndex)]="tabIndex">
   <vcl-tab>
-    <template vcl-tab-label>Tab1</template>
+    <ng-template vcl-tab-label>Tab1</ng-template>
   </vcl-tab>
   <vcl-tab>
-    <template vcl-tab-label>Tab2</template>
+    <ng-template vcl-tab-label>Tab2</ng-template>
   </vcl-tab>
   Shared Content Tab: {{tabIndex}}
 </vcl-tab-nav>
