--- a/demo/ng-vcl/demo-components/label/demo.component.html
+++ b/demo/ng-vcl/demo-components/label/demo.component.html
@@ -6,7 +6,7 @@
 
 <h3>Wrapping Labels:</h3>
 <vcl-label label="Watch my button" subLabel="my button is amazing" class="myclass1 myclass2">
-  <button>button</button>
+  <button vcl-button>button</button>
 </vcl-label>
 
 <br/>
@@ -22,8 +22,8 @@ Primary:
 <vcl-label label="mylabel" subLabel="with sub" type="primary"></vcl-label>
 
 <br/>
-<br/> sucess:
-<vcl-label label="mylabel" subLabel="with sub" type="sucess"></vcl-label>
+<br/> success:
+<vcl-label label="mylabel" subLabel="with sub" type="success"></vcl-label>
 
 <br/>
 <br/> Info:
