textarea: default autogrow should be false + fixes

--- a/demo/ng-vcl/demo-components/textarea/textarea.component.html
+++ b/demo/ng-vcl/demo-components/textarea/textarea.component.html
@@ -1,5 +1,5 @@
 <h3>Default</h3>
-<textarea vcl-textarea [(ngModel)]="data1"></textarea>
+<textarea vcl-textarea [(ngModel)]="data1" rows="5"></textarea>
 
 
 <h3>Textarea with autogrow (minRows=5, maxRows=10)</h3>
