[dropdown]: commit unsaved change; [plotly.demo]: fix

--- a/demo/components/plotly/demo.component.html
+++ b/demo/components/plotly/demo.component.html
@@ -1,6 +1,6 @@
 <vcl-plotly
-  [elementId]="elementId"
-  [plotClass]="customClass"
+  [plotId]="plotId"
+  [plotClass]="plotClass"
   [data]="data"
   [layout]="layout">
 </vcl-plotly>
