--- a/demo/ng-vcl/demo-components/icon/icon.component.html
+++ b/demo/ng-vcl/demo-components/icon/icon.component.html
@@ -11,7 +11,7 @@ Icon provider based (from the <i>Font Awesome</i> icon font):
 PNG image resource based:
 <vcl-icon [src]="'http://materialdesignicons.com/api/download/icon/png/E4A14909-3821-4DB1-A739-4DA464ABEEB7/36'"></vcl-icon>
 
-<!--<br><br>
+<br><br>
 
 SVG image resource based:
 <vcl-icon [src]="'http://materialdesignicons.com/api/download/icon/png/E4A14909-3821-4DB1-A739-4DA464ABEEB7'"></vcl-icon>
@@ -31,4 +31,4 @@ c-1.656,0-3.289-0.102-4.895-0.297C9.08,88.491,19.865,92,31.449,92c37.737,0,58.37
 c0-0.92-0.02-1.834-0.059-2.743C93.771,25.929,97.251,22.195,100.001,17.942L100.001,17.942z"></path>
 </defs>
 </svg>
-<vcl-icon [svguse]="'#twitter'" [class]="'vclIconSize1'"></vcl-icon>-->
+<vcl-icon [svguse]="'#twitter'" [class]="'vclIconSize1'"></vcl-icon>
