--- a/demo/ng-vcl/demo-components/month-picker/month-picker.component.html
+++ b/demo/ng-vcl/demo-components/month-picker/month-picker.component.html
@@ -1,34 +1,7 @@
 <vcl-month-picker
   id="myStyledMonthPicker"
-  [locales]="locales"
   [dateOptions]="dateOptions"
   [prevYearAvailable]="true"
-  [nextYearAvailable]="true"
-  [colors]="['#50E3C2', '#FF3CE6']">
+  [nextYearAvailable]="true">
 </vcl-month-picker>
 
-<br><br>
-
-<button vcl-button #target
-  label="Expand"
-  class="vclSquare"
-  (tap)="expandMonthPicker($event)">
-</button>
-
-<vcl-popover
-  target='#target'
-  targetAttachment='bottom right'
-  attachment='top right'
-  [(visible)]="expanded">
-  <vcl-month-picker
-    [expandable]="true"
-    [(expanded)]="expanded"
-    [(currentYear)]="currentYear"
-    [monthsPerRow]="4"
-    (select)="onSelect($event)"
-    (prevYearBtnTap)="onPreviousYearTap()"
-    [prevYearAvailable]="prevYearAvailable"
-    (nextYearBtnTap)="onNextYearTap()"
-    [nextYearAvailable]="nextYearAvailable">
-  </vcl-month-picker>
-</vcl-popover>
