--- a/src/ng-vcl/token/token.component.html
+++ b/src/ng-vcl/token/token.component.html
@@ -1,10 +1,9 @@
-<span class="vclTokenLabel">{{ label }}</span>
-<button *ngIf="removeable" 
+<span class="vclTokenLabel">{{label}}</span>
+<button vcl-button
+        *ngIf="removable" 
+        class="vclTransparent"
         type="button" 
         title="Remove"
-        type="button"
-        class="vclTransparent vclButton">
-  <div class="vclIcogram" (tap)="remove.emit()">
-    <span class="vclIcon fa fa-remove"></span>
-  </div>
+        appIcon="fa:remove"
+        (tap)="onRemoveTap()">
 </button>
