--- a/demo/ng-vcl/demo-components/metalist/metalist.component.html
+++ b/demo/ng-vcl/demo-components/metalist/metalist.component.html
@@ -12,7 +12,7 @@
 
 <br/>
 <h3>multi-select:</h3>
-<vcl-metalist #metalist2 (change)="onChange($event)" [maxSelectableItems]="3">
+<vcl-metalist #metalist2 mode="multiple" (change)="onChange($event)" [maxSelectableItems]="3">
   <vcl-metalist-item #meta *ngFor="let item of items" [value]="item.value" [selected]="item.selected">
     <div>
       <button vcl-button (tap)="metalist2.select(meta)">Select</button>
@@ -38,7 +38,7 @@
 
 <br/>
 <h3>multi-select with ngModel:</h3>
-<vcl-metalist #metalist4 [(ngModel)]="value2" [maxSelectableItems]="3">
+<vcl-metalist #metalist4 [(ngModel)]="value2" mode="multiple" [maxSelectableItems]="3">
   <vcl-metalist-item #meta *ngFor="let item of items" [value]="item.value" [selected]="item.selected">
     <div>
       <button vcl-button (tap)="metalist4.select(meta)">Select</button>
