--- a/src/ng-vcl/select/select.component.html
+++ b/src/ng-vcl/select/select.component.html
@@ -5,24 +5,13 @@
     [attr.aria-autocomplete]="list"
     [style.marginBottom]="0"
     >
-
-    <div class="vclInput" readonly *ngIf="showDisplayValue" [class.vclSelected]="focused" (tap)="toggle($event)">
+    <div *ngIf="showDisplayValue" class="vclInput" readonly [class.vclSelected]="focused" (tap)="toggle($event)">
       {{displayValue}}
     </div>
-
-    <div class="vclInput vclTokenInput vclLayoutHorizontal vclLayoutWrap" readonly *ngIf="!showDisplayValue" [class.vclSelected]="focused" (click)="toggle($event)">
-      <div class="vclTokenContainer">
-        <ng-container *ngFor="let item of selectedItems">
-          <div class="vclToken">
-            <span class="vclTokenLabel">{{item.label}}</span>
-            <button type="button" tabindex="-1" touch-action="none" aria-label="Remove" title="Remove" class="vclTransparent vclButton" (click)="deselectItem(item, event)">
-              <div class="vclIcogram">
-                <span role="img" class="vclIcon fa fa-remove"></span>
-              </div>
-            </button>
-          </div>
-        </ng-container>
-      </div>
+    <div *ngIf="!showDisplayValue" class="vclInput vclTokenInput vclLayoutHorizontal vclLayoutWrap" readonly [class.vclSelected]="focused" (click)="toggle($event)">
+      <vcl-token-list>
+        <vcl-token *ngFor="let item of selectedItems" [label]="item.label" [removable]="true" (remove)="deselectItem(item, $event)"></vcl-token>
+      </vcl-token-list>
     </div>
 
     <button vcl-button
@@ -34,24 +23,26 @@
     </button>
   </div>
 
-  <vcl-dropdown #dropdown
+  <vcl-dropdown 
+      #dropdown
       [style.display]="expanded ? null : 'none'"
       (change)="onDropdownChange($event)"
+      [selectionMode]="selectionMode"
       [maxSelectableItems]="maxSelectableItems"
       tabindex="-1"
       [style.position]="'relative'"
       [style.top.px]="dropdownTop"
       [style.width]="'100%'"
       [style.position]="'absolute'"
-      [style.zIndex]="999999"
-      >
-    <vcl-dropdown-option *ngFor="let item of items" 
+      [style.zIndex]="999999">
+    <vcl-dropdown-option 
+      *ngFor="let item of items" 
       [metadata]="item" 
       [value]="item.value" 
       [selected]="item.selected" 
       [disabled]="item.disabled" 
       [label]="item.label" 
-      [sublabel]="item.sublabel"
-    ></vcl-dropdown-option>
+      [sublabel]="item.sublabel">
+    </vcl-dropdown-option>
   </vcl-dropdown>
 </div>
