token: fix focusing on token-input

--- a/src/ng-vcl/token/token-input.component.html
+++ b/src/ng-vcl/token/token-input.component.html
@@ -12,8 +12,9 @@
 <input 
   vcl-input
   #input
-  (change)="onChange($event)"
   placeholder="Type to add tokens" 
   autocomplete="off" 
+  [tabindex]="tabindex"
   (keyup.enter)="add(input.value)"
-  flex />
+  flex
+  />
