--- a/src/ng-vcl/token/token.component.html
+++ b/src/ng-vcl/token/token.component.html
@@ -5,5 +5,5 @@
         type="button" 
         title="Remove"
         appIcon="fa:remove"
-        (tap)="onRemoveTap()">
+        (click)="onRemoveClick($event)">
 </button>
