--- a/src/ng-vcl/file-input/file-input.component.html
+++ b/src/ng-vcl/file-input/file-input.component.html
@@ -1,4 +1,4 @@
-<input #input type="file" style="display: none;" (change)="onChange()" (focus)="onFocus()" (blur)="onBlur()" [accept]="accept" [multiple]="multiple" [placeholder]="placeholder" [disabled]="disabled" />
+<input #input type="file" style="display: none;" (change)="onInputChange()" (focus)="onFocus()" (blur)="onBlur()" [accept]="accept" [multiple]="multiple" [placeholder]="placeholder" [disabled]="disabled" />
 <div class="vclFileInputIcon vclIcon fa fa-upload" aria-hidden="true" aria-label="account" role="img"></div>
 <div class="vclFileInputPlaceholder">
   <div *ngIf="value$ | async">{{ value$ | async }}</div>
