token: support ControlValueAccessor onTouched

--- a/src/ng-vcl/token/token-input.component.html
+++ b/src/ng-vcl/token/token-input.component.html
@@ -16,5 +16,7 @@
   autocomplete="off" 
   [tabindex]="tabindex"
   (keyup.enter)="add(input.value)"
+  (focus)="onInputFocus()"
+  (blur)="onInputBlur()"
   flex
   />
