[vcl-month-picker]: allow to preselect and deselect a preselected month (preselectMonth, dePreselectMonth); update

--- a/demo/components/month-picker/month-picker.component.html
+++ b/demo/components/month-picker/month-picker.component.html
@@ -1,5 +1,4 @@
-<vcl-month-picker
-  id="myStyledMonthPicker"
+<vcl-month-picker id="myStyledMonthPicker" #myStyledMonthPicker
   [locales]="locales"
   [dateOptions]="dateOptions"
   [prevYearAvailable]="true"
