form-control-label: replace auto-wrap with wrapping attribute

--- a/demo/ng-vcl/demo-components/form-control-label/form-control-label.component.html
+++ b/demo/ng-vcl/demo-components/form-control-label/form-control-label.component.html
@@ -4,7 +4,7 @@
 
 <h3>Wrapping label:</h3>
 
-<label vcl-form-control-label label="Label 2" subLabel="Sub label 2">
+<label vcl-form-control-label label="Label 2" subLabel="Sub label 2" [wrapping]="true">
   <button vcl-button id="form-control-label-demo-checkbox-1" label="ClickMe!" (click)="onButtonClick()"></button>
 </label>
 
